2003-01-09  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCustomView.m: Corrected problem with dummy implementation
	of encodeWithCoder:.  (Problem found and patch supplied by
	Chris Vetter).
	
2003-01-09  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: [GormDocument remove:]: added code
	to check the boolean returned from the removeConnection
	methods.  If the result is NO, dont proceed with the
	delete.
	
2003-01-09  Gregory John Casamento <greg_casamento@yahoo.com

	* GormDocument.m: [GormDocument remove:]: added code
	to break connections when a class, action or outlet
	is deleted.  

2003-01-09  Gregory John Casamento <greg_casamento@yahoo.com>

	* ClassInformation.plist: added missing orderFrontFontPanel: 
	method to FirstResponder.
	* Gorm.gorm: updated to fix font panel problem.
	* Gorm.m: Implemented orderFrontFontPanel:

2003-01-08  Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/3Containers/inspector.m: NSTabView was not
	defining a size inspector.  I commented out the method which
	was returning nothing and now the NSTabView uses the default
	view size inspector.

2003-01-08  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormClassManager.m: -[GormClassManager customClassForObject:]:
	Added code to resolve the object being passed in to the name
	which is used in the name table.   This is for lookup in the
	custom class map.   This corrects a problem which was introduced
	in the previous fix.
	* GormInspectorsManager.m: in browser delegate.  Removed code
	which was looking up the name seperately.   Now relies on code
	added above.
	* GormCustomClassInspector.m: 
	-[GormCustomClassInspector _setCurrentSelectionClassName:]:
	Removed code which looks up the name.  Now uses code in
	GormClassManager.
	
2003-01-08  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormClassManager.m: Added some NSDebugLog statements
	to assist with debugging.
	* GormInspectorManager.m: Corrected a problem which was