@@ -1,3 +1,12 @@
+2003-01-12  Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* GormDocument.m: -[GormDocument parseHeader:]: Fixed a
+	problem parsing headers with multiple variables in one 
+	declarations (e.g. "id x,y,z").   Also added code
+	to recognize actions in the form of "(id) actionName: (id)x".
+	* Documentation/Gorm.texi: Modified docs to show current
+	status of Gorm.
+	
 2003-01-09  Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* GormCustomView.m: Corrected problem with dummy implementation
